# cpp-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  add_8h.html  add_8h.js  add_8h_source.html  annotated.html  bar_8h.html  bar_8h_source.html  classBar-members.html  classBar.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  index.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html  problem.md  sub_8h.html  sub_8h.js  sub_8h_source.html  version_8h.html  version_8h.js  version_8h_source.html
.clangd/index/: benchmark.cpp.6F840E8A69AC4336.idx  lib.cpp.494B967BECAA00AA.idx  lib.h.86E6B40F9EB8A85F.idx  lib_test.cpp.E95C4C33E6E3ACD3.idx  lib_test2.cpp.B49608816096B081.idx  main.cpp.998E63D1D378B2D8.idx  test.cpp.AD304B756ED0566A.idx
.github/codeql/: codeql_config.yml
.github/workflows/: archlinux.yml  benchmark.yml  build.yml  ci.yml  clang_tidy.yml  codeql.yml  coverage.yml  doxygen.yml  install.yml  linux.yml  macos.yml  main.yml  oss_fuzz.yml  release.yml  sanitizer.yml  sanitizers.yml  ubuntu.yml  valgrind.yml  windows.yml
benchmark/: benchmark.cpp
cmake/: AddCompilerFlag.cmake  Check.cmake  ClangTidy.cmake  CompilerOptions.cmake  Coverage.cmake  Doxygen.cmake  Format.cmake  Install.cmake  LTO.cmake  PkgConfig.cmake  Profile.cmake  Sanitizer.cmake  Sanitizers.cmake  Valgrind.cmake  Version.cmake  addConfig.cmake.in  klib.pc.in  klibCPack.cmake  klibConfig.cmake.in
dev/bench/: data.js
doc/: Doxyfile.in
doc/html/: add_8h.html  add_8h.js  add_8h__incl.map  add_8h__incl.md5  add_8h_source.html  annotated.html  annotated_dup.js  classBar-members.html  classBar.html  classBar.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js  sub_8h.html  sub_8h__incl.map  sub_8h__incl.md5  sub_8h_source.html  version_8h.html  version_8h.js  version_8h_source.html
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
include/: add.h  bar.h  lib.h  sub.h  version.h
include/lib/: add.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js
src/: CMakeLists.txt  lib.cpp  main.cpp
src/lib/: add.cpp
src/test/: add_test.cpp  test.cpp
test/: add_test.cpp  test.cpp
test_project/: .gitignore  CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  add_test.cpp  add_test2.cpp  bar_test.cpp  lib_test.cpp  lib_test2.cpp  sub_test.cpp
